Update input width and fix delete buttons's alignment

--- a/src/pages/Cart/components/ProductQuantity/ProductQuantity.module.css
+++ b/src/pages/Cart/components/ProductQuantity/ProductQuantity.module.css
@@ -60,7 +60,24 @@
   cursor: pointer;
   display: flex;
   align-items: center;
-  align-self: center;
+}
+
+@media (min-width: 330px) {
+  .input {
+    width: 100px;
+  }
+}
+
+@media (min-width: 340px) {
+  .input {
+    width: 110px;
+  }
+}
+
+@media (min-width: 340px) {
+  .input {
+    width: 120px;
+  }
 }
 
 @media (min-width: 360px) {
@@ -74,15 +91,13 @@
   }
 }
 
-@media (min-width: 450px) {
-  .input {
-    width: 100px;
-  }
-}
-
 @media (min-width: 800px) {
   .input {
     width: 130px;
+  }
+
+  .delete {
+    align-self: center;
   }
 }
 
